<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddspipe_yaml</name>
  <version>0.2.0</version>
  <description>
     *eprosima DDS Pipe* C++ Module to read objects and configurations from YAML files.
  </description>

  <license file="LICENSE">Apache 2.0</license>



  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>yamlcpp</depend>
  <depend>fastrtps</depend>
  <depend>cpp_utils</depend>
  <depend>ddspipe_core</depend>
  <depend>ddspipe_participants</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
