<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsproxy_tool</name>
  <version>2.0.0</version>
  <description>
     *eprosima DDS Router* Application to execute a DDS Router from a YAML configuration file.
  </description>
  
  <license file="LICENSE">Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>cpp_utils</depend>
  <depend>ddsproxy_yaml</depend>
  <depend>ddsproxy_core</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
